--- a/_posts/2023-04-07-CG#1.md
+++ b/_posts/2023-04-07-CG#1.md
@@ -1,4 +1,4 @@
-# CG#1 Linear Transformation
+# CG#1 Transformations
 
 Here's the table of contents. Just keep in mind all of the contents will be written in English. I will (probably) update a Simplified Chinese translated version if I had time in the future. XD
 
@@ -9,4 +9,4 @@ The following will write about the linear transformations. In definition, linear
 ### Rotation
 ### Shear
 ### Scale
-**Translation** is not a linear transformation in its own dimension. But we can make it into a linear transformation by introducing *homogeneous coordinates(齐次坐标)*.
+**Translation** is not a linear transformation in its own dimension. But we can make it into a linear transformation by introducing *homogeneous coordinates*.
