--- a/_posts/2023-04-07-CG#1.md
+++ b/_posts/2023-04-07-CG#1.md
@@ -5,8 +5,18 @@ Here's the table of contents. Just keep in mind all of the contents will be writ
 1. TOC
 {:toc}
 
+## 2D Transformations
 The following will write about the linear transformations. In definition, linear transformation $a'$ of a point $a$ is defined as $a' = \mathbf{M}a$, where $\mathbf{M}$ is a matrix. The following matrix are frequently seen linear transformations.
 ### Rotation
 ### Shear
 ### Scale
 **Translation** is not a linear transformation in its own dimension. But we can make it into a linear transformation by introducing *homogeneous coordinates*.
+
+## 3D Transformations
+### Complex Rotation Analysis
+### Quaternions
+
+## MVP Transformation
+### View-Camera Transformation
+### Projection Transformation (Orthogonal)
+### Projection Transformation (Perspective)
