--- a/_posts/2023-04-08-CG#2.md
+++ b/_posts/2023-04-08-CG#2.md
@@ -1,2 +1,20 @@
 # CG#2 Rasterizations
 
+1. TOC
+   {:toc}
+## Math
+### Interpolation
+### Barycentric Coordinates
+
+## Draw Triangle
+### Algorithm
+
+## Sample Theory
+### Anti-aliasing
+### Minification
+### Magnification
+
+## Depth Test
+### Z-buffer
+
+
