--- a/_posts/2023-04-09-CG#3.md
+++ b/_posts/2023-04-09-CG#3.md
@@ -1,2 +1,19 @@
-# CG#3 Lighting models
+# CG#3 Lighting Models and Shading
 
+1. TOC
+   {:toc}
+
+## Light and Color
+### Color Encode
+### Optical Information
+
+## Blinn-Phong Model
+### Specular
+### Diffuse
+### Ambient
+
+## Realtime Rendering
+
+## Physics-Based Rendering
+
+## Texture
