--- a/_posts/2023-04-10-CG#4.md
+++ b/_posts/2023-04-10-CG#4.md
@@ -1,2 +1,26 @@
 # CG#4 Geometry and Data Structures
 
+1. TOC
+   {:toc}
+
+## Implicit Geometry
+
+## Explicit Geometry
+### Mesh
+### Bezier Curves
+### Splines
+
+## Halfedge Data Structure
+### Data Structure
+### Mesh Edits
+
+## Upsample: Subdivision
+### Catmull-Clark Subdivision
+### Loop Subdivision
+
+## Downsample
+### Simplification via Edge Collapse
+### Minimizing a quadratic form
+
+
+
