--- a/_posts/2023-04-12-CG#6.md
+++ b/_posts/2023-04-12-CG#6.md
@@ -3,7 +3,7 @@
 In Whitted-Style Raytracing, we made many wrong assumptions which will make the final result looks not that photo-realistic. The radiometry knowledge helps us to precisely control some of the factors in the rendering process.
 
 1. TOC
-   {:toc}
+{:toc}
 
 ## Lighting Physics
 ### Definitions
@@ -18,7 +18,7 @@ Bringing the radiometry into 3D space, we need to have a way to calculate space,
 <u>Note</u>: We use _steradian_ as a form unit of solid angle, but in fact the unit should be 1. 
 
 
-4. <u><b>Def</b></u> (Irradiance) Irradiance is the 2D density of radiant flux. Thus it is defined as $E(\textbf{x}) = \frac{d\Phi(\textbf{x}}{dA}[\frac{W}{m^2}][\frac{lm}{m^2} = lux]$.\
+4. <u><b>Def</b></u> (Irradiance) Irradiance is the 2D density of radiant flux. Thus it is defined as $E(\textbf{x}) = \frac{d\Phi(\textbf{x})}{dA}[\frac{W}{m^2}][\frac{lm}{m^2} = lux]$.\
 <u>Note</u>: Irradiance is a property for a surface.\
 <u>Note</u>: When calculating the area of the region, we are calculating the projected area which is perpendicular to the light beam. The equivalent area should actually be $A\cos\theta$, and this is what the **Lambert's Law** is saying.
 5.  <u><b>Def</b></u> (Lambert's Law) $E = \frac{\Phi\cos\theta}{A}$, where $A$ is the original area of the region, and $\theta$ is the angle between the surface and the perpendicular direction of the light.
